[package]
name = "dewey-decimal"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Simple wrapper around Dewey Decimal classifications"
readme = "README.md"
homepage = "https://github.com/dax-dot-gay/dewey-decimal"
repository = "https://github.com/dax-dot-gay/dewey-decimal"

[dependencies]
bevy_reflect = { version = "0.16.1", optional = true }
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
specta = { version = "1.0.5", optional = true }
trie-rs = "0.4.2"

[features]
default = ["serde"]
serde = ["dep:serde"]
specta = ["dep:specta"]
schemars = ["dep:schemars"]
bevy_reflect = ["dep:bevy_reflect"]

[build-dependencies]
prettyplease = "0.2.35"
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
syn = { version = "2.0.104", features = ["full"] }


